# chillclaw-web

./: README.md  SKILL.md  alpha-cache.json  api.json  earn-cache.json  index.html
.github/workflows/: update-alpha.yml
api/: alpha.js  announcements.js  booster.js  earn.js  news.js  overview.js  price.js  surf.js
mcp/: SKILL.md  pyproject.toml
mcp/src/chillclaw_mcp/: server.py
research/: BASED.json  CYS.json  KAT.json  PRL.json  R2.json  TRADOOR.json
scripts/: analytics.js
